# Energy-OS

./: .dockerignore  .env.example  .gitignore  PRD.md  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_02_001_initial_schema.py  2026_03_02_002_create_hypertables.py  2026_03_02_003_seed_admin_user.py  2026_03_02_004_p2p_energy_trading.py  2026_03_02_005_add_timestamps.py  2026_03_02_006_phase2_realtime.py  2026_03_05_007_notification_preferences.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  alert_rules.py  alerts.py  analytics.py  auth.py  buildings.py  energy_meters.py  forecasts.py  hvac.py  notifications.py  realtime.py  recommendations.py  router.py  sensors.py  users.py  zones.py
backend/app/api/v1/p2p/: analytics.py  communities.py  market.py  offers.py  orders.py  prosumers.py  requests.py  trading_rules.py  wallet.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  passwords.py  roles.py
backend/app/db/: __init__.py  base.py  engine.py  redis.py  session.py
backend/app/middleware/: error_handler.py  logging_config.py  rate_limit.py  request_context.py
backend/app/models/: __init__.py  alert.py  alert_rule.py  building.py  energy_meter.py  forecast.py  hvac_status.py  notification.py  notification_preference.py  recommendation.py  sensor_reading.py  user.py  zone.py
backend/app/models/p2p/: __init__.py  community_member.py  energy_community.py  energy_offer.py  energy_request.py  energy_wallet.py  meter_reading_p2p.py  p2p_order.py  p2p_settlement.py  p2p_tax_summary.py  prosumer_profile.py  trading_rule.py  wallet_ledger.py
backend/app/schemas/: __init__.py  alert.py  alert_rule.py  auth.py  building.py  common.py  device_health.py  energy.py  energy_meter.py  forecast.py  hvac.py  notification.py  recommendation.py  sensor.py  user.py  zone.py
backend/app/schemas/p2p/: __init__.py  analytics.py  community.py  market.py  offer.py  order.py  prosumer.py  request.py  settlement.py  trading_rule.py  wallet.py
backend/app/services/: __init__.py  alert_engine.py  alert_rule_service.py  alert_service.py  analytics_service.py  building_service.py  email_service.py  energy_meter_service.py  forecast_service.py  hvac_service.py  notification_preference_service.py  notification_service.py  realtime_service.py  recommendation_service.py  sensor_service.py  user_service.py  zone_service.py
backend/app/services/p2p/: analytics_service.py  community_service.py  marketplace_service.py  matching_engine.py  pricing_engine.py  prosumer_service.py  settlement_engine.py  trading_rule_service.py  wallet_service.py
backend/app/utils/: __init__.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_buildings.py  test_energy_meters.py  test_error_handling.py  test_forecasts.py  test_health.py  test_hvac.py  test_pagination.py  test_rbac.py  test_recommendations.py  test_sensors.py  test_zones.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: BuildingSelector.tsx  Card.tsx  ErrorBoundary.tsx  Layout.tsx  NotificationBell.tsx  ProtectedRoute.tsx  Spinner.tsx  StatCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useApi.ts  useWebSocket.ts
frontend/src/pages/: AlertsPage.tsx  AnalyticsPage.tsx  BuildingsPage.tsx  DashboardPage.tsx  DeviceHealthPage.tsx  ForecastsPage.tsx  HvacPage.tsx  LoginPage.tsx  NotificationSettingsPage.tsx  RecommendationsPage.tsx  SensorsPage.tsx
frontend/src/pages/p2p/: CommunitiesPage.tsx  MarketplacePage.tsx  TradingAnalyticsPage.tsx  TradingRulesPage.tsx  WalletPage.tsx
frontend/src/types/: index.ts
scripts/: Dockerfile.db  init_db.sql  seed_demo_data.py
